--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -85,7 +85,7 @@ p{
 {
     .time{
         align-self: center;
-        font-size: o.8rem;
+        font-size: 0.8rem;
     }
     .time h2{
         font-size: 0.9rem;
