--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org/">
-<head>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+<head >
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:src="@{/js/dynaRDrop.js}"></script>
+    <script th:src="@{/js/check.js}"></script>
     <meta charset="ISO-8859-1">
     <title>Insert title here</title>
 </head>
-<body>
-<div class="container">
-    <div class="card">
+<body style="background-color: #81D4FA; font-weight: bold">
+<div class="container-fluid">
+    <div class="card" style="border-color: black">
         <div class="card-header bg-primary text-white text-center">
             <h3>SELECT CITY</h3>
         </div>
@@ -18,7 +18,7 @@
             <form>
 
                 <div class="row">
-                    <div class="col-2">Country</div>
+                    <div class="col-2" style="color: black">Country</div>
                     <div class="col-8">
                         <select id="countries" class="form-control">
                             <option value='0'>SELECT</option>
@@ -30,31 +30,32 @@
                 </div>
                 <br/>
                 <div class="row">
-                    <div class="col-2">State</div>
+                    <div class="col-2" style="color: black">State</div>
                     <div class="col-8">
-                        <select id="states" class="form-control">
+                        <select  id="states" class="form-control">
                             <option value='-1'>SELECT</option>
                         </select>
                     </div>
                 </div>
                 <br/>
                 <div class="row">
-                    <div class="col-2">City</div>
+                    <div class="col-2" style="color: black">City</div>
                     <div class="col-8">
-                        <select id="cities" class="form-control">
+                        <select name="cities" id="cities" class="form-control">
                             <option value='-1'>SELECT</option>
                         </select>
                     </div>
                 </div>
 
+                <div class="row justify-content-center" style="padding-top: 15px">
+                    <form th:href="@{/forecast/}" method="get">
+                        <input id="submitbtn" type="button" value="Submit" />
+                    </form>
+                </div>
             </form>
         </div>
     </div>
-
 </div>
-
-
-<script type="text/javascript">
 
 </script>
 </body>
