--- a/src/main/resources/templates/index22.html
+++ b/src/main/resources/templates/index22.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link  rel="stylesheet" type="text/css" th:href="@{/css/main.css}">>
+    <link  rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/3.6.95/css/materialdesignicons.css" rel="stylesheet">
 </head>
