--- a/src/main/resources/static/css/background.css
+++ b/src/main/resources/static/css/background.css
@@ -2,8 +2,7 @@ body {
     color: #fff;
     overflow-x: hidden;
     height: 100%;
-    background-image: linear-gradient(#81D4FA, #2196F3);
-    background-repeat: no-repeat;
+    background-color: #81D4FA;
 }
 
 .card0 {
