--- a/src/main/resources/templates/forecast.html
+++ b/src/main/resources/templates/forecast.html
@@ -3,23 +3,21 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link  rel="stylesheet" type="text/css" th:href="@{/css/background.css}">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script th:src="@{/js/dynaRDrop.js}"></script>
     <meta charset="ISO-8859-1">
-    <title>Title</title>
+    <title th:text="${data.city.name}"></title>
 </head>
 <body>
 
 <div class="container-fluid px-1 px-sm-3 py-5 mx-auto">
     <div class="row d-flex justify-content-center">
-        <div class="row card0">
-            <div class="card1 col-lg-8 col-md-7">
-                <small>the.weather</small>
+        <div class="row card0" style=" border-bottom-color: black; border-left-color: black; border-right-color: black; border-top-color: black;border-style: solid">
+            <div class="card1 col-lg-8 col-md-7" style=" border-bottom-color: transparent; border-left-color: transparent; border-right-color: black; border-top-color: transparent;border-style: solid">
                 <div class="text-center">
                     <img class="img-fluid" src="https://www.esri.com/content/dam/esrisites/en-us/landing-pages/g1455518-applied-meteorology-using-arcgis1-12-20/applied-meteorology-using-arcgis1-fg.png">
                 </div>
                 <div class="row px-3 mt-3 mb-3">
-                    <h1 class="large-font mr-3" th:text="${data.dailyForecasts[0].temp}" >&#176;</h1>
+                    <h1 class="large-font mr-3" >[[${data.dailyForecasts[0].temp}]]&#176;</h1>
                     <div class="d-flex flex-column mr-3">
                         <h2 class="mt-3 mb-0" th:text="${data.city.name}"></h2>
                         <small th:text="${data.dailyForecasts[0].dateTime}"></small>
@@ -28,6 +26,10 @@
                         <h3 class="fa fa-sun-o mt-4"></h3>
                         <small th:text="${data.dailyForecasts[0].conditions}"></small>
                     </div>
+
+                    <div class="d-flex flex-column">
+                        <img class="img-fluid" th:src="${data.dailyForecasts[0].icon}">
+                    </div>
                 </div>
             </div>
             <div class="card2 col-lg-4 col-md-5">
@@ -35,51 +37,141 @@
 
                     <div class="line my-3"></div>
 
-                    <p>Weather Details</p>
+                    <h2>Weather Details</h2>
                     <div class="row px-3">
-                        <p class="light-text">Cloudy</p>
-                        <p class="ml-auto">12%</p>
+                        <p class="light-text">Condition</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].conditions}]]</p>
+                    </div>
+                    <div class="row px-3">
+                        <p class="light-text">Minimum Temperature</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].tempMin}]]&#176;</p>
+                    </div>
+                    <div class="row px-3">
+                        <p class="light-text">Minimum Temperature</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].tempMax}]]&#176;</p>
+                    </div>
+                    <div class="row px-3">
+                        <p class="light-text">Feels Like</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].feelsLike}]]&#176;</p>
                     </div>
                     <div class="row px-3">
                         <p class="light-text">Humidity</p>
-                        <p class="ml-auto">78%</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].humidity}]]%</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Wind</p>
-                        <p class="ml-auto">1km/h</p>
+                        <p class="light-text">Wind Speed</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].windSpeed}]]km/h</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Rain</p>
-                        <p class="ml-auto">0mm</p>
-                    </div>
-
-                    <div class="line my-5"></div>
-
-                    <p>Weather Details</p>
-                    <div class="row px-3">
-                        <p class="light-text">Cloudy</p>
-                        <p class="ml-auto">12%</p>
+                        <p class="light-text">Visibility</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].visibility}]]km</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Humidity</p>
-                        <p class="ml-auto">78%</p>
+                        <p class="light-text">Pressure</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].pressure}]]mb</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Wind</p>
-                        <p class="ml-auto">1km/h</p>
+                        <p class="light-text">Sunrise</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].sunrise}]]</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Rain</p>
-                        <p class="ml-auto">0mm</p>
+                        <p class="light-text">Sunset</p>
+                        <p class="ml-auto">[[${data.dailyForecasts[0].sunset}]]</p>
                     </div>
 
                     <div class="line my-3"></div>
+
+                    <div class="row px-3">
+                        <h2 style="text-align: center" th:text="${data.dailyForecasts[0].description}"></h2>
+                    </div>
 
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="row justify-content-center">
+        <div class="row card0" style="background: blue; border-bottom-color: black; border-left-color: black; border-right-color: black; border-top-color: transparent;border-style: solid">
 
+            <div class="col" >
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[1].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[1].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[1].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[1].description}"></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[2].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[2].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[2].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[2].description}"></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[3].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[3].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[3].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[3].description}"></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[4].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[4].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[4].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[4].description}"></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[5].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[5].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[5].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[5].description}"></div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row justify-content-center" >
+                    <h4 th:text="${data.dailyForecasts[6].dateTime}"></h4>
+                </div>
+                <div class="row justify-content-center">
+                        <h1 >[[${data.dailyForecasts[6].temp}]]&#176;</h1>
+                        <img class="img-fluid" th:src="${data.dailyForecasts[6].icon}">
+                </div>
+                <div class="row ">
+                    <div style="text-align: center" th:text="${data.dailyForecasts[6].description}"></div>
+                </div>
+            </div>
+
+    </div>
+</div>
+</div>
 </body>
 </html>
