--- a/src/main/resources/templates/forecast.html
+++ b/src/main/resources/templates/forecast.html
@@ -47,7 +47,7 @@
                         <p class="ml-auto">[[${data.dailyForecasts[0].tempMin}]]&#176;</p>
                     </div>
                     <div class="row px-3">
-                        <p class="light-text">Minimum Temperature</p>
+                        <p class="light-text">Maximum Temperature</p>
                         <p class="ml-auto">[[${data.dailyForecasts[0].tempMax}]]&#176;</p>
                     </div>
                     <div class="row px-3">
