--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <br/>
                 <div class="row">
-                    <div class="col-2" style="color: black">State</div>
+                    <div class="col-2" style="color: black">Municipality</div>
                     <div class="col-8">
                         <select  id="states" class="form-control">
                             <option value='-1'>SELECT</option>
