--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
 
                 <div class="row justify-content-center" style="padding-top: 15px">
                     <form th:href="@{/forecast/}" method="get">
-                        <input id="submitbtn" type="button" value="Submit" />
+                        <input id="submitbtn" style="color: white; background-color: #2196F3; font-size-adjust: inherit; font-size: 25px " type="button" value="Submit" />
                     </form>
                 </div>
             </form>
